--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-Flask==3.0.2
+Flask==2.0.0
+Jinja2==3.0.0
+Werkzeug==2.0.2
+MarkupSafe==2.1.0
+click==8.0.3
+itsdangerous==2.0.1
 Pillow==8.4.0
 opencv-python-headless==4.5.3.56
 pytesseract==0.3.8
