--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==2.0.2
 Pillow==8.3.2
 opencv-python==4.5.3.56
 pytesseract==0.3.8
+setuptools==60.0.0
 NumPy 1.24.3
 libatlas-base-dev
 gunicorn
